Some price fetch UI improvements, layout shift prevention.

--- a/styles/CoinChartError.module.css
+++ b/styles/CoinChartError.module.css
@@ -1,28 +1,26 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    font-family: 'Courier New', Courier, monospace;
-    color: deepskyblue;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-family: "Courier New", Courier, monospace;
+  color: deepskyblue;
 }
 
 .error {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-family: monospace;
-    color: deeppink;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-family: monospace;
+  color: deeppink;
 }
-
