--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  min-height: 100vh;
+  min-height: 100rem;
 }
 
 .description {
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
+  text-align: center;
   font-size: 1.5rem;
-  max-width: var(--max-width);
   width: 100%;
   z-index: 2;
 }
@@ -31,7 +31,8 @@
   width: var(--max-width);
   justify-items: stretch;
   align-items: center;
-  max-width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
 .error {
